# flash-transfer

./: .gitignore  README.md  SECURITY_AUDIT.md  build.bat  fix-icons.mjs  package-lock.json  package.json  render.yaml  run.bat
.github/workflows/: release.yml
server/: package.json  relay-server.js
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lan_discovery.rs  lib.rs  main.rs  messaging.rs  oauth_server.rs  relay_client.rs  transfer.rs
website/: index.html  transfer.html
website/css/: style.css
website/js/: transfer.js
